--- a/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
+++ b/KatlaSportNg/src/app/hive-management/lists/hive-section-list.component.html
@@ -2,39 +2,38 @@
   <h2>Hive Sections for Hive</h2>
   <table class="table table-nonfluid">
     <thead>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Code</th>
-      <th scope="col"></th>
+    <th scope="col">#</th>
+    <th scope="col">Code</th>
+    <th scope="col">Name</th>
+    <th scope="col"></th>
     </thead>
-      <tbody>
-        <tr *ngFor="let hiveSection of hiveSections">
-          <th scope="row">{{hiveSection.id}}</th>
-          <th scope="row">{{hiveSection.name}}</th>
-          <th scope="row">{{hiveSection.code}}</th>
-          <td>
-            <span class="btn-toolbar" role="toolbar" aria-label="Hive action buttons" style="display: block; white-space:nowrap;">
-              <div class="btn-group" role="group" aria-label="Edit group">
-                <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
-              </div>
-              <div class="btn-group" role="group" aria-label="Delete group" *ngIf="!hiveSection.isDeleted" (click)="onDelete(hiveSection.id)">
-                <button class="btn btn-warning" type="button">Delete</button>
-              </div>
-              <div class="btn-group" role="group" aria-label="UnDelete group" *ngIf="hiveSection.isDeleted" (click)="onUnDelete(hiveSection.id)">
-                <button class="btn btn-warning" type="button">Undelete</button>
-              </div>
-            </span>
-          </td>
-        </tr>
-      </tbody>
+    <tbody>
+      <tr *ngFor="let hiveSection of hiveSections">
+        <th scope="row">{{hiveSection.id}}</th>
+        <th scope="row">{{hiveSection.code}}</th>
+        <th scope="row">{{hiveSection.name}}</th>
+        <td>
+          <span class="btn-toolbar" role="toolbar" aria-label="Hive section action buttons" style="display: block; white-space:nowrap;">
+            <div class="btn-group mr-2" role="group" aria-label="Delete group" *ngIf="!hiveSection.isDeleted" (click)="onDelete(hiveSection.id)">
+              <button type="button" class="btn btn-warning">Delete</button>
+            </div>
+            <div class="btn-group mr-2" role="group" aria-label="UnDelete group" *ngIf="hiveSection.isDeleted" (click)="onUnDelete(hiveSection.id)">
+              <button type="button" class="btn btn-warning">UnDelete</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="Edit group">
+              <button routerLink="/section/{{hiveSection.id}}" type="button" class="btn btn-primary">Edit</button>
+            </div>
+          </span>
+        </td>
+      </tr>
+    </tbody>
   </table>
   <div class="btn-toolbar" role="toolbar" aria-label="Action buttons">
     <div class="btn-group mr-1" role="group" aria-label="Back group">
       <button routerLink="/hives" type="button" class="btn btn-primary">Back</button>
     </div>
     <div class="btn-group" role="group" aria-label="Add group">
-      <button routerLink="/hive/{{this.hiveId}}" type="button" class="btn btn-primary">Add hive section</button>
+      <button routerLink="/hive/{{this.hiveId}}/section" type="button" class="btn btn-primary">Add hive section</button>
     </div>
   </div>
 </div>
-
